Flag c98 added to makefiles where it's missing

--- a/Module00/ex00/Makefile
+++ b/Module00/ex00/Makefile
@@ -15,7 +15,7 @@ SRCS 		=	megaphone.cpp
 OBJS		=	$(SRCS:.cpp=.o)
 NAME		=	megaphone
 CC			=	g++
-CFLAGS		=	-Wall -Wextra -Werror
+CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 RM			=	rm -f
 
 all:	$(NAME)
